# afps

./: .clang-format  .gitignore  AGENTS.md  README.md  afps_browser_game_codex_prompt.md  codex_exec_loop.rb  future_feature_possibilities.txt
.github/workflows/: ci.yml
assets/environments/cc0/: README.md
assets/environments/cc0/kenney_city_kit_suburban_20/: map.json
assets/weapons/cc0/: README.md
client/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  stryker.conf.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.perf.config.ts
client/coverage/: index.html
client/coverage/src/: app.ts.html  bootstrap.ts.html  index.html  main.ts.html
client/coverage/src/characters/: catalog.ts.html  index.html
client/coverage/src/environment/: index.html  retro_urban_map.ts.html  (+1 more)
client/perf/: budgets.json
client/src/: app.ts  bootstrap.ts  main.ts  style.css  types.ts
client/src/audio/: manager.ts  settings.ts
client/src/characters/: catalog.ts
client/src/environment/: advanced_suburban_generator.ts  procedural_clouds.ts  procedural_map.ts  retro_urban_map.ts  weapon_viewmodel.ts
client/src/input/: bindings.ts  look_inversion.ts  pointer_lock.ts  sampler.ts  sensitivity.ts
client/src/net/: env.ts  event_queue.ts  input_cmd.ts  input_sender.ts  prediction.ts  protocol.ts  quantization.ts  runtime.ts  signaling.ts  snapshot_buffer.ts  snapshot_decoder.ts  types.ts  webrtc.ts
client/src/pickups/: manager.ts
client/src/players/: remote_avatars.ts
client/src/profile/: storage.ts  types.ts  validation.ts
client/src/rendering/: fx_settings.ts  procedural_textures.ts
client/src/sim/: config.ts  parity.ts  wasm.ts  wasm_adapter.ts
client/src/ui/: hud.ts  hud_state.ts  metrics_settings.ts  prejoin.ts  scoreboard.ts  settings.ts  status.ts
client/src/weapons/: casing_pool.ts  config.ts  debug.ts  loadout.ts  sfx.ts  validation.ts
client/src/world/: collision.ts
client/tests/: app.test.ts  bootstrap.test.ts  fakeThree.ts  fakeWindow.ts  main.test.ts  perf.test.ts
client/tests/audio/: manager.test.ts  settings.test.ts
client/tests/characters/: catalog.test.ts
client/tests/environment/: advanced_suburban_generator.test.ts  map_parity_matrix.test.ts  procedural_clouds.test.ts  procedural_map.test.ts  retro_urban_manifest.test.ts  retro_urban_map.test.ts  weapon_viewmodel.test.ts
client/tests/fixtures/: wasm_stub.js
client/tests/input/: bindings.test.ts  look_inversion.test.ts  pointer_lock.test.ts  sampler.test.ts  sensitivity.test.ts
client/tests/net/: chaos.test.ts  env.test.ts  event_queue.test.ts  fakes.ts  input_cmd.test.ts  input_sender.test.ts  prediction.test.ts  protocol.test.ts  protocol_property.test.ts  quantization.test.ts  runtime.test.ts  signaling.test.ts  snapshot_buffer.test.ts  snapshot_decoder.test.ts  webrtc.test.ts  webrtc_helpers.test.ts
client/tests/pickups/: manager.test.ts
client/tests/profile/: storage.test.ts  validation.test.ts
client/tests/rendering/: fx_settings.test.ts  procedural_textures.test.ts  shader_snapshot.test.ts
client/tests/sim/: config.test.ts  parity.test.ts  replay.test.ts  wasm.test.ts  wasm_adapter.test.ts
client/tests/ui/: audio.spec.ts  decal_projection.spec.ts  hud.test.ts  hud_state.test.ts  hud_updates.spec.ts  map_sanity.spec.ts  memory_leak.spec.ts  metrics_settings.test.ts  perf_budgets.spec.ts  pointer_lock.spec.ts  prejoin_join_button.mjs  prejoin_join_button.spec.ts  prejoin_preview.mjs  prejoin_preview.spec.ts  render_sanity.spec.ts  scoreboard.test.ts  settings.test.ts  status.test.ts
client/tests/weapons/: casing_pool.test.ts  config.test.ts  debug.test.ts  loadout.test.ts  sfx.test.ts  validation.test.ts
client/tests/world/: collision.test.ts
docs/: ADVANCED_SUBURBAN_GENERATOR.md  ENGINE_STACK.md  GAMEPLAY_FEATURES.md  LIVING_SPEC.md  MESH_BVH_WORLD_HIT_PLAN.md  NETCODE.md  NETWORK_STACK.md  OUTLINES.md  PERFECT_HITS.md  PROTOCOL.md  RECTANGLE_COLLIDER_OPTIONS.md  RENDERING.md  SECURITY.md  SETTINGS_UI.md  SHOOTING_AROUND_CORNERS.md  TURN.md  WASM_SIM.md  WEAPONS.md  WEAPONS_V2.md  WORLD_COLLISION_MESHES.md  prejoin.md  reliable_decal_streaming.md
prompts/: animated_characters.md  map_collider.md  weapons_v1.md  weapons_v2.md
server/: CMakeLists.txt  CTestCustom.cmake  README.md
server/certs/: README.md
server/fuzz/: fuzz_protocol.cpp
server/src/: auth.cpp  auth.h  character_manifest.cpp  character_manifest.h  combat.cpp  combat.h  config.cpp  config.h  health.cpp  health.h  load_test.cpp  main.cpp  map_world.cpp  map_world.h  protocol.cpp  protocol.h  rate_limiter.cpp  rate_limiter.h  rtc_echo.cpp  rtc_echo.h  security_headers.cpp  security_headers.h  signaling.cpp  signaling.h  signaling_json.cpp  signaling_json.h  tick.cpp  tick.h  usage.cpp  usage.h  weapon_config.cpp  weapon_config.h  world_collision_mesh.cpp  world_collision_mesh.h
server/tests/: test_auth.cpp  test_combat.cpp  test_config.cpp  test_health.cpp  test_map_world.cpp  test_property.cpp  test_protocol.cpp  test_rate_limiter.cpp  test_rtc_echo.cpp  test_security_headers.cpp  test_shared_sim.cpp  test_signaling.cpp  test_signaling_json.cpp  test_snapshot_bandwidth.cpp  test_tick.cpp  test_usage.cpp  test_world_collision_mesh.cpp
shared/: README.md
shared/data/: collision_meshes_v1.json
shared/schema/: afps_protocol.fbs
shared/sim/: config.json  sim.h
shared/sim/replays/: ability_replay.json
shared/wasm/: README.md  build.sh  sim_wasm.cpp
shared/weapons/: config.json  weapon_defs.h
tools/: build_collision_meshes.mjs  build_server_sanitizers.sh  check_bundle_size.mjs  check_flatbuffers.sh  check_map_parity.mjs  coverage_server.sh  format_cpp.sh  generate_advanced_map_manifest.mjs  generate_character_manifest.py  generate_flatbuffers.sh  lint_cpp.sh  perf_check.sh  run_all_tests.sh  run_dev.sh  run_fuzz_protocol.sh  run_mull.sh  run_server.sh  run_server_sanitizers.sh  sync_weapon_assets.sh  turn_rest_credentials.py  validate_retro_urban_map.py  wasm_parity_check.mjs  wasm_sync.sh
tools/turn/: docker-compose.yml  turnserver.conf
(+87 files in other folders)
